--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h1>hello world</h1>
-    <h2>I am web developer</h2>
+
+    <h2>I am student</h2>
     <h3>I love programming</h3>
     <h4>I am fron end web developer</h4>
 </body>
