--- a/index.html
+++ b/index.html
@@ -9,17 +9,8 @@
 </head>
 
 <body>
-<<<<<<< HEAD
-    <h1>hello world</h1>
-    <h2>I am web developer</h2>
-    <h3>I love mother</h3>
-=======
-
-    <h2>I am student</h2>
-    <h3>I love programming</h3>
->>>>>>> branchA
-    <h4>I am fron end web developer</h4>
-    <h5>I love my familly</h5>
+    <h2>i like biriani</h2>
+    <h2>i can talk english</h2>
 </body>
 
 </html>
